--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -857,19 +857,45 @@ kable(x,
 
 ### Läkemedel vid bipolärt syndrom
 
-**Litium:** Har FDA-indikation för behandling av manisk episod och underhållsbehandling (längre tid till återfall). Halveringstiden är 12 tim initialt men 24 tim vid steady state (efter ca 5 dagar). Kvoten dos/plasmakoncentration är högre vid pågående mani, yngre ålder, högre koppsvikt (ffa muskelmassa), och högre saltintag. Den påverkas även av njurfunktion, vätskeförlust, och samtidig medicinering. En systematisk litteraturgenomgång visade att 0.9 mmol/L är lägsta effektiva nivå vid mani, och att nivåer över 1.4 ej ger bättre effekt. Tänk på att mani medför lägre litiumnivå, varför dosen bör sänkas efter skovet med sikte på serumkoncentration 0.6-0.8 mmol/L [@Goodwin2007, kap 17]. Litium är lika effektivt som andra antimaniska läkemedel över en treveckorsperiod. Antidepressiv effekt av litium kan komma efter 1-2 veckor men dröjer ofta 3-5 veckor. Vid bipolär depression rekommenderas CANMAT målkoncentration 0.8-1.2 mM/L [@Yatham2018].
+**Litium:** Har FDA-indikation för behandling av manisk episod och underhållsbehandling (längre tid till återfall). Halveringstiden är 12 tim initialt men 24 tim vid steady state (efter ca 5 dagar). Kvoten dos/plasmakoncentration är högre vid pågående mani, yngre ålder, högre koppsvikt (ffa muskelmassa), och högre saltintag. Den påverkas även av njurfunktion, vätskeförlust, och samtidig medicinering. En systematisk litteraturgenomgång visade att 0.9 mmol/L är lägsta effektiva nivå vid mani, och att nivåer över 1.4 ej ger bättre effekt. Tänk på att mani medför lägre litiumnivå, varför dosen bör sänkas efter skovet med sikte på serumkoncentration 0.6-0.8 mmol/L [@Goodwin2007, kap 17]. Litium är lika effektivt som andra antimaniska läkemedel över en treveckorsperiod. Antidepressiv effekt av litium kan komma efter 1-2 veckor men dröjer ofta 3-5 veckor. Vid akut bipolär depression rekommenderas CANMAT målkoncentration 0.8-1.2 mM/L [@Yatham2018].
+
+<!-- sproule Lithium in bipolar disorder: can drug concentrations predict therapeutic effect [@Sproule2002] -->
 
 Tidigare respons på litium förutsäger bättre respons under aktuell manisk episod, och sämre effekt av antiepileptiska läkemedel. Nivåer över 0.8 mmol/L mer effektiva vid mani än lägre nivåer [@Goodwin2007].
 
 Litium föredras framför valproat vid klassisk euforisk mani, få tidigare episoder, när manier har följts av depression, och vid hereditet för bipolärt syndrom (särskilt om släktingen svarat på litium)  [@Yatham2018].
 
- > Patients who respond well to lithium treatment usually have an episodic remitting pre-treatment clinical course, a family history of BD (especially BD responsive to lithium), low rates of comorbidity (especially anxiety and substance abuse disorders), and a pattern of mania-depression­euthymia in biphasic episodes, as well as a typical clinical presentation. Responsiveness may also be a familial trait, with a study showing that patients who have a lithium-­responsive relative have a 67% likelihood of also being lithium responsive, versus 35% of those without a responsive relative. [@Yatham2018]
+ > Patients who respond well to lithium treatment usually have an episodic remitting pre-treatment clinical course, a family history of BD (especially BD responsive to lithium), low rates of comorbidity (especially anxiety and substance abuse disorders), and a pattern of mania-depression­euthymia in biphasic episodes, as well as a typical clinical presentation. Responsiveness may also be a familial trait, with a study showing that patients who have a lithium­responsive relative have a 67% likelihood of also being lithium responsive, versus 35% of those without a responsive relative. [@Yatham2018]
 
 <!-- Combined Lithium and Electroconvulsive Therapy: Pharmacokinetic and Pharmacodynamic Interactions rudorfer  [@Rudorfer1987] -->
 
+Underhållsbehandling: Konsensus målkoncentration (dalvärde 12 tim +- 1 tim efter senaste dos, även vid singeldosering) 0.60-0.80 mmol/L. Kan reduceras till 0.40-0.60 mmol/L vid god effekt men dålig tolerans. Kan ökas till  0.80-1.00 mmol/L  vid otillräcklig respons och god tolerans. Nivåer över 1-1.2 mmol/L (ingen konsensus) bör ej överskridas [@Nolen2019]. 
+
+Engångsdosering till kvällen kan eventuellt öka följsamhet, reducera polyuri och medföra mindre påverkan på njurarna, utan försämrad effektivitet [@Carter2013;Bowen1991].
+
+ <!-- Studies have shown that once-a-day lithium at night, compared with multiple daily doses, lowers urine volume and other symptoms of the lithium-induced diabetes insipidus-like syndrome  [@Bowen1991]. -->
+ 
+ <!-- Trials examining renal biopsy results also found that multiple daily doses were associated with more pathological changes to the kidneys -->
+
+<!-- Another possible advantage of giving the whole dose at night is that the kidneys filter lithium more slowly at night. The net effect is that you only need 80% of the daily divided doses when changing patients to a once-nightly regimen. -->
+
 **Valproat:**  De vanligaste biverkningarna är illamåend och trötthet. Påverkar metabolismen av flera andra läkemedel, bla lamotrigin. Vid akut mani krävs plasmakoncentration >45 mkg/ml för effekt och biverkningar blir problematiska vid nivå >125 mkg/ml. Snabb upptrappning (30 mg/kg d 1-2, 20 mg/kg d 3-10) kan ge snabbare effekt vid akut mani, men är likvärdig med olanzapin.
 
-Valproat är lika effektivt vid klassisk- och dysforisk mani. Rekommenderas för de som haft multipla tidigare episoder, framträdande irritabilitet, framträdande dysfori, samsjuklighet med substansbrukssyndrom, eller anamnes på trauma mot huvudet  [@Yatham2018]. Undvik till kvinnor i fertil ålder.
+Valproat är lika effektivt vid klassisk- och dysforisk mani. Rekommenderas för de som haft multipla tidigare episoder, framträdande irritabilitet, framträdande dysfori, samsjuklighet med substansbrukssyndrom, eller anamnes på trauma mot huvudet [@Yatham2018]. Undvik hos kvinnor i fertil ålder.
+
+Dosering vid mani:
+
+- Starta 750 mg/dag eller 20 mg/kg. Enterotabletten doseras tre gånger per dag. Depotberedning kan ges en eller två gånger per dag. 
+- Dosen bör höjas så snabbt som möjligt för att uppnå lägsta terapeutiska dos.
+- Måldos vanligen 1000-2000 mg/d (40-60 mg/kg/d). Max 60 mg/kg/d.
+
+<!-- - Valproatnivå ≥110 mkg/mL hos kvinnor eller ≥135 mkg/mL hos män ökar risken för trombocytopeni. -->
+
+> Den dagliga dosen ska fastställas och kontrolleras individuellt av den behandlande läkaren. Den rekommenderade initiala dagliga dosen är 750 mg. Dessutom har en startdos på 20 mg valproat per kg kroppsvikt i kliniska studier också visat sig ha en acceptabel säkerhetsprofil. Depotformuleringar kan ges en eller två gånger dagligen. Dosen bör höjas så snabbt som möjligt för att uppnå lägsta terapeutiska dos, som ger önskad klinisk effekt. Den dagliga dosen ska anpassas till det kliniska svaret för att fastställa lägsta effektiva dos för den individuella patienten. Den genomsnittliga dagliga dosen valproat ligger vanligen mellan 1000 mg och 2000 mg. Patienter som får högre dagliga doser än 45 mg/kg kroppsvikt bör följas noggrant. Fortsatt behandling av maniska episoder vid bipolär sjukdom ska anpassas individuellt och lägsta effektiva dos ska användas. [FASS]
+
+>  Behandling av maniska episoder, profylaktisk behandling av bipolär sjukdom (vuxna): Vid behandling av bipolär sjukdom är den rekommenderade underhållsdosen mellan 500 mg och 2000 mg dagligen fördelat på 1 eller 2 doser. I undantagsfall kan dosen höjas till högst 3000 mg dagligen. Den individuella dosen beror på den kliniska effekten, men plasmanivåer på 50-125 mg/l bör eftersträvas. Vid profylaktisk behandling ska lägsta möjliga dos ges [FASS].
+
+Äldre: En lägre initial dos och långsam upptitrering rekommenderas.
 
 **Karbamazepin**: Faktorer som kan vara förnippade med respons på karbamazepin är anamanes på skalltrauma, samsjuklighet med ångest och substansbrukssyndrom, schizoaffektiv bld med stämningsnkongruenta vanföreställningar, ingen bipolär sjjukdom hos förstagradssläktingar [@Yatham2018].
 
